fixed whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -304,6 +304,7 @@ header {
   .hero .heroScreen {
     background-color: rgba(0, 0, 0, 0.5); }
     .hero .heroScreen .wrapper .heroContent {
+      clear: both;
       float: none;
       width: 100%;
       margin: 0 auto;
