--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -98,6 +98,7 @@ header {
     background-color: rgba(0, 0, 0, 0.5);
     .wrapper{
       .heroContent{
+        clear: both;
         float:none;
         width: 100%;
         margin: 0 auto;
